5.10 (sy)
      - make canvas follow playback
4.10 (ws)
      - its now possible to lasso select part of a measure (cut/copy/paste operations
        are still missing)
     (sy)
      - fix note entry octave problem (patch from Rick Fitzsimmons)
3.10 (ws)
      - drum part note entry with mouse
      - added mscore_nl.ts template for translation
     (sy)
      - fix tuplet input with keyboard
      - fix segfault when deleting entire score, caused by trying to create end barline
2.10 (ws)
      - applied patches from Seth Yastrov:
            - added circled numbers to fingering palette (for use in guitar fingering)
            - changed guitar in instruments setup: use 8vb treble clef instead of
              -12 transposition
      - more code for drum palette
30.9 (ws)
      - fix musicXML import bug which crashes mscore when saving in native format
28.9 (ws)
      - make sure a drum part outputs midi always on channel 10
      - implement a special drum palette to easy input of drum notes (unfinished)
     (db)
      - fix translations that broke after English menu changes
25.9 (ws)
      - fix measure delete: also remove tuplets
      - note input changes; when entering an 1/8 note at the place of an 1/4 note
        the 1/4 note is reduced to an 1/8 note to make room for the new note
        instead of first replacing the note with an 1/4 rest.
      - fix moving of end bar line after automatically appending a new measure during
        note input
24.9 (ws)
      - fix "x" (flip direction) command in slur edit mode
      - implement drop of layout break symbol on layout break symbol
      - allow only one layout break symbol per measure
      - changed ui for entering ties in note entry mode:
            Example: enter "g+g" to create two connected notes instead of "+gg"
23.9 (db)
      - menu "grammar" fixes (capitalization and ellipses)
     (ws)
      - fix crash when shift+drag a note head
      - delete natural symbol now works