@@ -1,5 +1,7 @@
 5.10 (sy)
       - make canvas follow playback
+      - fix behavior of Open Recent menu: unsaved scores no longer appear,
+        and newly saved scores appear immediately.
 4.10 (ws)
       - its now possible to lasso select part of a measure (cut/copy/paste operations
         are still missing)
